fix typo in libxdot man page

--- a/lib/xdot/xdot.3
+++ b/lib/xdot/xdot.3
@@ -141,7 +141,7 @@ void freeXDotColor (xdot_color*);
 .fi
 .SH DESCRIPTION
 \fIlibxdot\fP provides support for parsing and deparsing
-graphical operations specificed by the \fIxdot\fP language.
+graphical operations specified by the \fIxdot\fP language.
 .SS "Types"
 .PP
 .SS "  xdot"
