fix: realign libxdot man page description of xop_kind
This enum was changed in 2ebad94d317711522edaff778825fadda08f7584 but the man
page was not updated. Related to #1957.

--- a/lib/xdot/xdot.3
+++ b/lib/xdot/xdot.3
@@ -92,7 +92,7 @@ typedef enum {
     xop_bezier,
     xop_polyline,       xop_text,
     xop_fill_color,     xop_pen_color, xop_font, xop_style, xop_image,
-    xop_grad_fill_color,     xop_grad_pen_color,
+    xop_grad_color,
     xop_fontchar
 } xop_kind; 
     
