--- a/lib/xdot/xdot.3
+++ b/lib/xdot/xdot.3
@@ -128,11 +128,30 @@ typedef struct {
     int flags;
 } xdot;
 
+typedef struct {
+    int cnt;  /* no. of xdot ops */
+    int n_ellipse;
+    int n_polygon;
+    int n_polygon_pts;
+    int n_polyline;
+    int n_polyline_pts;
+    int n_bezier;
+    int n_bezier_pts;
+    int n_text;
+    int n_font;
+    int n_style;
+    int n_color;
+    int n_image;
+    int n_gradcolor;
+    int n_fontchar;
+} xdot_stats;
+
 xdot* parseXDotF (char*, drawfunc_t opfns[], int sz);
 xdot* parseXDot (char*);
 char* sprintXDot (xdot*);
 void fprintXDot (FILE*, xdot*);
 void freeXDot (xdot*);
+int statXDot (xdot*, xdot_stats*);
 
 xdot_grad_type colorType (char*);
 xdot_color* parseXDotColor (char*);
@@ -256,6 +275,11 @@ the result in \fIclr\fP. It returns NULL on failure.
 .PP
 .SS "  void freeXDotColor (xdot_color* cp)"
 This frees the resources associated with a value of type \fIxdot_color\fP.
+.PP
+.SS "  int statXDot (xdot *x, xdot_stats *sp)"
+This function is provided for retrieving various statistics about an \fIxdot\fP
+object. Returns 0 on success and populates the output parameter \fIsp\fP with
+counts of various entities in the \fIxdot\fP object.
 
 .SH BUGS
 Although some small checking is done on the \fIsz\fP argument to
