--- a/m4/README
+++ b/m4/README
@@ -1,4 +1,4 @@
-The files: iconv.m4 lib-ld.m4  lib-link.m4  lib-prefix.m4
+The files: lib-ld.m4  lib-link.m4  lib-prefix.m4
 were obtained from gettext-0.11.4-5 sources.
 
 The file: glib-gettext.m4 was obtained from glib2-devel (go figure!)
