--- a/cmd/tools/nop.1
+++ b/cmd/tools/nop.1
@@ -25,7 +25,7 @@ Produce no output - just check the input for valid DOT.
 Print usage information.
 .SH "EXIT STATUS"
 If any errors occurred while processing any input, such as a file
-not found or a file containing illegal DOT, a non-zero exit value
-is returned. Otherwise, zero is returned.
+not found or a file containing illegal DOT, \fBEXIT_FAILURE\fR is returned.
+Otherwise \fBEXIT_SUCCESS\fR is returned.
 .SH "SEE ALSO"
 wc(1), acyclic(1), gvpr(1), gvcolor(1), ccomps(1), sccmap(1), tred(1), libgraph(3)
