--- a/cmd/edgepaint/edgepaint.1
+++ b/cmd/edgepaint/edgepaint.1
@@ -29,11 +29,11 @@ color two edges differently if their incidence angle is less than \fIa\fP degree
 .BI \-random_seed= s 
 random seed to use. \fIs\fP must be an integer. If \fIs\fP is negative, we do |\fIs\fP| iterations with different seeds and pick the best. 
 .TP
-.BI \-lightness= "l1,l2j"
-only applies for the "lab" color scheme: \fIl1\fP and \fIl2\fP must integers, with 0 <= \fIl1\fP <= \fIl2 <=100. By default, we use "0,70" 
+.BI \-lightness= "l1,l2"
+only applies for the "lab" color scheme: \fIl1\fP and \fIl2\fP must integers, with 0 <= \fIl1\fP <= \fIl2\fP <=100. By default, we use "0,70"
 .TP
 .BI \-share_endpoint
-if this option is specified, edges that shares an node are not considered in conflict if they are close to parallel but 
+if this option is specified, edges that share a node are not considered in conflict if they are close to parallel but
 are on the opposite sides of the node (around 180 degree). 
 .TP
 .BI \-o " f"  
